--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -138,6 +138,9 @@ a {
   .home-banner-wrapper {
     width: 100%;
 
+    padding: 0px;
+    margin: 0px;
+
     padding-left: 10%;
     padding-right: 10%;
 
@@ -154,10 +157,13 @@ a {
 
     border-radius: 32px;
 
+    padding: 0px;
+    margin: 0px;
+
     padding-left: 6%;
     padding-right: 6%;
 
-    padding-top: 3%;
+    padding-top: 32px;
     padding-bottom: 32px;
 
     display: flex;
@@ -371,7 +377,6 @@ a {
 
   .home-properties-0-container {
     width: 100%;
-    min-height: 35vh;
 
     display: flex;
     flex-direction: row;
@@ -381,8 +386,7 @@ a {
     margin: 0px;
     padding: 0px;
 
-    margin-top: 64px;
-    padding-top: 64px;
+    margin-top: 54px;
 
     padding-left: 10%;
     padding-right: 10%;
@@ -400,7 +404,6 @@ a {
 
   .home-properties-1-container {
     width: 100%;
-    height: 30vh;
 
     display: flex;
     flex-direction: column;
@@ -410,7 +413,7 @@ a {
     margin: 0px;
     padding: 0px;
 
-    margin-top: 80px;
+    margin-top: 54px;
 
     padding-left: 10%;
     padding-right: 10%;
@@ -435,7 +438,7 @@ a {
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
-    margin-top: 64px;
+    margin-top: 54px;
   }
 
   .home-properties-2-container {
@@ -542,7 +545,7 @@ a {
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
-    margin-top: 32px;
+    margin-top: 24px;
 
     display: flex;
     flex-direction: row;
@@ -551,7 +554,7 @@ a {
   }
 
   .home-properties-3-container {
-    width: 49%;
+    width: Calc(50% - 12px);
     height: 500px;
 
     overflow: hidden;
@@ -581,9 +584,22 @@ a {
     align-self: center;
   }
 
+  .home-properties-4-title {
+    font-family: "Cormonant";
+    font-size: 40px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+
+    margin-top: 54px;
+  }
+
   .home-properties-4-container {
     width: 100%;
-    min-height: 50vh;
 
     display: flex;
     flex-direction: column;
@@ -598,8 +614,8 @@ a {
     padding-left: 10%;
     padding-right: 10%;
 
-    margin-top: 32px;
-    margin-bottom: 64px;
+    margin-top: 8px;
+    margin-bottom: 24px;
   }
   
   .home-properties-4-cards-row {
