--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -94,7 +94,7 @@ a {
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 24px;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -105,7 +105,7 @@ a {
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 20px;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -116,7 +116,7 @@ a {
     width: 20%;
     height: 20%;
   }
-  
+
   .home-banner-title {
     font-family: 'Cormorant';
     font-weight: 700;
@@ -188,7 +188,7 @@ a {
 
   .home-banner-image-container {
     width: 40%;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -202,7 +202,7 @@ a {
 
   .footer-container {
     width: 100%;
-    height: 250px;
+    height: 220px;
 
     display: flex;
     flex-direction: row;
@@ -221,7 +221,7 @@ a {
   .footer-letters-container {
     width: 240px;
     height: 100%;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -236,7 +236,7 @@ a {
   .footer-letters-legal-container {
     width: 200px;
     height: 100%;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -262,7 +262,7 @@ a {
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 16px;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -617,7 +617,7 @@ a {
     margin-top: 8px;
     margin-bottom: 24px;
   }
-  
+
   .home-properties-4-cards-row {
     width: 100%;
 
@@ -652,7 +652,7 @@ a {
 
     border-radius: 16px;
   }
-  
+
   .home-properties-4-card-container-big-letters-container {
     width: 50%;
     height: 100%;
@@ -685,7 +685,7 @@ a {
 
     align-self: flex-end;
   }
-  
+
   .home-properties-4-card-container-little {
     width: 25%;
     min-height: 320px;
@@ -703,7 +703,7 @@ a {
     background-color: #7DB3D7;
     border-radius: 16px;
   }
-  
+
   .home-properties-4-card-title {
     font-family: "Montserrat";
     font-size: 20px;
@@ -747,7 +747,7 @@ a {
 
     color: #6D6D6D;
   }
-  
+
   .home-properties-4-card-tokens-text {
     font-family: "Montserrat";
     font-size: 18px;
@@ -765,7 +765,7 @@ a {
     margin: 0px;
     padding: 0px;
   }
-  
+
   .home-properties-4-card-check-image {
     width: 24px;
     height: 24px;
@@ -792,7 +792,7 @@ a {
 
   .privacy-policy-banner-wrapper {
     width: 100%;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -806,7 +806,7 @@ a {
   .privacy-policy-banner-container {
     width: 100%;
     min-height: 430px;
-    
+
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -817,14 +817,14 @@ a {
     background-repeat: no-repeat;
 
     border-radius: 32px;
-    
+
     margin: 0px;
     padding: 0px;
 
     padding-left: 6%;
     padding-right: 6%;
   }
-  
+
   .privacy-policy-banner-letters-container {
     width: 50%;
 
@@ -832,13 +832,13 @@ a {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    
+
     margin: 0px;
     padding: 0px;
 
     margin-right: 16px;
   }
-  
+
   .privacy-policy-banner-image-container {
     width: 50%;
 
@@ -846,7 +846,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -859,21 +859,21 @@ a {
 
     align-self: center;
   }
-  
+
   .privacy-policy-banner-letters-title {
     font-family: "Cormorant";
     font-size: 2.5vw;
     font-weight: 700;
-    
+
     margin: 0px;
     padding: 0px;
   }
-  
+
   .privacy-policy-banner-letters-subtitle {
     font-family: "Montserrat";
     font-size: 22px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
   }
@@ -902,7 +902,7 @@ a {
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: 700;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -913,7 +913,7 @@ a {
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -924,7 +924,7 @@ a {
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -936,7 +936,7 @@ a {
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -946,11 +946,11 @@ a {
 
   .page-banner-wrapper {
     width: 100%;
-    
+
     padding-left: 10%;
     padding-right: 10%;
 
-    margin-top: 64px;
+    margin-top: 24px;
   }
 
   .page-banner-container {
@@ -1013,11 +1013,143 @@ a {
     align-self: center;
   }
 
+  .pricing-subtitle {
+    font-family: "Cormonant";
+    font-size: 40px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+
+    margin-top: 54px;
+  }
+
+  .pricing-text {
+    font-family: "Montserrat";
+    font-size: 20px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+
+    margin-top: 12px;
+  }
+
   .pricing-banner-image-image {
     width: 260.60px;
     height: 306.79px;
 
     align-self: center;
+  }
+
+  .pricing-properties-1-wrapper {
+    width: 100%;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 32px;
+    margin-bottom: 54px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .pricing-properties-1-container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    padding: 24px;
+    margin: 0px;
+
+    border-radius: 16px;
+
+    border-color: #C2C2C2;
+    border-width: 1px;
+    border-style: solid;
+  }
+
+  .pricing-properties-1-container-letters {
+    width: 60%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    padding: 24px;
+    margin: 0px;
+  }
+
+  .pricing-properties-1-container-letters-title {
+    font-family: "Cormorant";
+    font-size: 32px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .pricing-properties-1-container-letters-text {
+    font-family: "Montserrat";
+    font-size: 20px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
+  }
+
+  .pricing-properties-1-container-image {
+    width: 20%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    text-align: center;
+
+    padding: 24px;
+    margin: 0px;
+  }
+
+  .pricing-properties-1-image-message {
+    width: 139.28px;
+    height: 57px;
+
+    align-self: center;
+  }
+
+  .pricing-properties-1-image-audio {
+    width: 173.86px;
+    height: 63.75px;
+
+    align-self: center;
+  }
+
+  .pricing-properties-1-image-text {
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 16px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 
   .contact-properties-0-container {
@@ -1027,12 +1159,11 @@ a {
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    
+
     padding-left: 10%;
     padding-right: 10%;
-    
-    margin-top: 64px;
-    margin-bottom: 64px;
+
+    margin-top: 54px;
   }
 
   .contact-properties-0-letters-container {
@@ -1042,7 +1173,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    
+
     padding: 24px;
   }
 
@@ -1053,7 +1184,7 @@ a {
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    
+
     padding: 8px;
     align-self: center;
   }
@@ -1076,7 +1207,7 @@ a {
     padding: 2px;
     align-self: center;
   }
-  
+
   .contact-properties-0-letters-inner-letters-container {
     width: calc(100% - 64px);
 
@@ -1084,11 +1215,11 @@ a {
     flex-direction: column;
     justify-content: flex-start;
     align-content: center;
-    
+
     padding: 2px;
     padding-left: 24px;
   }
-  
+
   .contact-properties-0-letters-inner-letters-social-container {
     width: 100%;
 
@@ -1096,10 +1227,10 @@ a {
     flex-direction: row;
     justify-content: flex-start;
     align-content: center;
-    
+
     margin-top: 8px;
   }
-  
+
   .contact-properties-0-letters-inner-letters-social-link {
     width: 24px;
     height: 24px;
@@ -1119,7 +1250,7 @@ a {
     font-family: "Cormorant";
     font-size: 40px;
     font-weight: 700;
-    
+
     margin: 0px;
     padding: 0px;
   }
@@ -1128,7 +1259,7 @@ a {
     font-family: "Montserrat";
     font-size: 18px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -1139,7 +1270,7 @@ a {
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -1251,7 +1382,7 @@ a {
 
   .home-banner-image-container {
     width: 100%;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1292,7 +1423,7 @@ a {
 
   .footer-letters-container {
     width: 100%;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1305,7 +1436,7 @@ a {
   .footer-letters-legal-container {
     width: 100%;
     height: 100%;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1330,7 +1461,7 @@ a {
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 16px;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -1468,7 +1599,7 @@ a {
     width: 54px;
     height: 54px;
   }
-  
+
   .home-properties-1-container {
     width: 100%;
     min-height: 40vh;
@@ -1491,7 +1622,7 @@ a {
     font-family: "Cormonant";
     font-size: 28px;
     font-weight: 700;
-    
+
     margin: 0px;
     padding: 0px;
   }
@@ -1500,7 +1631,7 @@ a {
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -1654,6 +1785,20 @@ a {
     align-self: center;
   }
 
+  .home-properties-4-title {
+    font-family: "Cormonant";
+    font-size: 28px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+
+    padding-left: 24;
+    padding-right: 24;
+
+    margin-top: 32px;
+  }
+
   .home-properties-4-container {
     width: 100%;
 
@@ -1670,10 +1815,9 @@ a {
     padding-left: 24px;
     padding-right: 24px;
 
-    margin-top: 64px;
-    margin-bottom: 40px;
+    margin-top: 0px;
   }
-  
+
   .home-properties-4-cards-row {
     width: 100%;
 
@@ -1707,7 +1851,7 @@ a {
 
     border-radius: 16px;
   }
-  
+
   .home-properties-4-card-container-big-letters-container {
     width: 100%;
     min-height: 320px;
@@ -1732,14 +1876,14 @@ a {
     margin: 0px;
     padding: 24px;
   }
-  
+
   .home-properties-4-card-container-big-image-image {
     width: 147.48px;
     height: 207.38px;
 
     align-self: center;
   }
-  
+
   .home-properties-4-card-container-little {
     width: 100%;
     height: 320px;
@@ -1757,7 +1901,7 @@ a {
     background-color: #7DB3D7;
     border-radius: 16px;
   }
-  
+
   .home-properties-4-card-title {
     font-family: "Montserrat";
     font-size: 20px;
@@ -1774,7 +1918,7 @@ a {
 
     margin: 0px;
     padding: 0px;
-    
+
     margin-top: -16px;
     margin-bottom: 16px;
   }
@@ -1801,7 +1945,7 @@ a {
 
     color: #6D6D6D;
   }
-  
+
   .home-properties-4-card-tokens-text {
     font-family: "Montserrat";
     font-size: 18px;
@@ -1819,7 +1963,7 @@ a {
     margin: 0px;
     padding: 0px;
   }
-  
+
   .home-properties-4-card-check-image {
     width: 24px;
     height: 24px;
@@ -1843,10 +1987,10 @@ a {
     margin-top: 24px;
     border-width: 0px;
   }
-  
+
   .privacy-policy-banner-wrapper {
     width: 100%;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -1859,7 +2003,7 @@ a {
   .privacy-policy-banner-container {
     width: 100%;
     min-height: 400px;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1870,11 +2014,11 @@ a {
     background-repeat: no-repeat;
 
     border-radius: 32px;
-    
+
     margin: 0px;
     padding: 24px;
   }
-  
+
   .privacy-policy-banner-letters-container {
     width: 100%;
 
@@ -1882,13 +2026,13 @@ a {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    
+
     margin: 0px;
     padding: 0px;
 
     margin-top: 8px;
   }
-  
+
   .privacy-policy-banner-image-container {
     width: 100%;
 
@@ -1896,7 +2040,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    
+
     margin: 0px;
     padding: 0px;
   }
@@ -1909,21 +2053,21 @@ a {
 
     margin-top: 24px;
   }
-  
+
   .privacy-policy-banner-letters-title {
     font-family: "Cormorant";
     font-size: 32px;
     font-weight: 700;
-    
+
     margin: 0px;
     padding: 0px;
   }
-  
+
   .privacy-policy-banner-letters-subtitle {
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
   }
@@ -1954,7 +2098,7 @@ a {
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: 700;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -1965,7 +2109,7 @@ a {
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -1976,7 +2120,7 @@ a {
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -1988,7 +2132,7 @@ a {
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -1998,7 +2142,7 @@ a {
 
   .page-banner-wrapper {
     width: 100%;
-    
+
     padding-left: 24px;
     padding-right: 24px;
 
@@ -2065,12 +2209,141 @@ a {
 
     align-self: center;
   }
+  
+  .pricing-subtitle {
+    font-family: "Cormonant";
+    font-size: 28px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  .pricing-text {
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    padding-left: 24px;
+    padding-right: 24px;
+
+    margin-top: 12px;
+  }
 
   .pricing-banner-image-image {
     width: 156.30px;
     height: 184px;
 
     align-self: center;
+  }
+
+  .pricing-properties-1-wrapper {
+    width: 100%;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 32px;
+
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  .pricing-properties-1-container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    border-radius: 16px;
+
+    border-color: #C2C2C2;
+    border-width: 1px;
+    border-style: solid;
+
+    padding: 16px;
+    margin: 0px;
+  }
+
+  .pricing-properties-1-container-letters {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    padding: 20px;
+    margin: 0px;
+  }
+
+  .pricing-properties-1-container-letters-title {
+    font-family: "Cormorant";
+    font-size: 28px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .pricing-properties-1-container-letters-text {
+    font-family: "Montserrat";
+    font-size: 20px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
+  }
+
+  .pricing-properties-1-container-image {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    text-align: center;
+
+    padding: 16px;
+    margin: 0px;
+  }
+
+  .pricing-properties-1-image-message {
+    width: 139.28px;
+    height: 57px;
+
+    align-self: center;
+  }
+
+  .pricing-properties-1-image-audio {
+    width: 173.86px;
+    height: 63.75px;
+
+    align-self: center;
+  }
+
+  .pricing-properties-1-image-text {
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 16px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 
   .contact-properties-0-container {
@@ -2080,10 +2353,10 @@ a {
     flex-direction: column;
     justify-content: flex-start;
     align-content: center;
-    
+
     padding-left: 24px;
     padding-right: 24px;
-    
+
     margin-top: 0px;
     margin-bottom: 24px;
   }
@@ -2095,7 +2368,7 @@ a {
     flex-direction: column;
     justify-content: flex-start;
     align-content: center;
-    
+
     padding: 0px;
   }
 
@@ -2106,7 +2379,7 @@ a {
     flex-direction: row;
     justify-content: flex-start;
     align-content: center;
-    
+
     padding: 8px;
     align-self: center;
   }
@@ -2129,7 +2402,7 @@ a {
     padding: 2px;
     align-self: center;
   }
-  
+
   .contact-properties-0-letters-inner-letters-container {
     width: calc(100% - 64px);
 
@@ -2137,11 +2410,11 @@ a {
     flex-direction: column;
     justify-content: flex-start;
     align-content: center;
-    
+
     padding: 2px;
     padding-left: 24px;
   }
-  
+
   .contact-properties-0-letters-inner-letters-social-container {
     width: 100%;
 
@@ -2149,10 +2422,10 @@ a {
     flex-direction: row;
     justify-content: flex-start;
     align-content: center;
-    
+
     margin-top: 8px;
   }
-  
+
   .contact-properties-0-letters-inner-letters-social-link {
     width: 24px;
     height: 24px;
@@ -2172,7 +2445,7 @@ a {
     font-family: "Cormorant";
     font-size: 40px;
     font-weight: 700;
-    
+
     margin: 0px;
     padding: 0px;
   }
@@ -2181,7 +2454,7 @@ a {
     font-family: "Montserrat";
     font-size: 18px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
@@ -2192,7 +2465,7 @@ a {
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: 400;
-    
+
     margin: 0px;
     padding: 0px;
 
