--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -248,7 +248,6 @@ a {
     color: #F8F8F8;
   }
 
-
   .footer-letters-title {
     font-family: 'Montserrat';
     font-weight: 700;
@@ -372,6 +371,36 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    align-content: center;
+  }
+
+  .dropdown-wrapper {
+    visibility: hidden;
+  }
+
+  .dropdown-image-container {}
+
+  .dropdown-image {}
+
+  .dropdown {}
+
+  .dropdown-content {}
+
+  .dropdown-content a {}
+
+  .dropdown-content a:hover {}
+
+  .dropdown:hover .dropdown-content {}
+
+  .dropdown:hover .dropbtn {}
+
+  .dropdown-change-theme-checkbox-container {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-content: center;
   }
 
@@ -1547,6 +1576,91 @@ a {
     width: 0%;
   }
 
+  .dropdown-wrapper {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .dropdown-image-container {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .dropdown-change-theme-checkbox-container {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    margin-top: 8px;
+    margin-bottom: 4px;
+  }
+
+  .dropdown-image {
+    width: 24px;
+    height: 24px;
+
+    align-self: flex-end;
+  }
+
+  .dropdown {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    position: relative;
+    display: inline-block;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+
+    padding: 8px;
+    border-radius: 16px;
+
+    border-color: #F8F8F8;
+    border-width: 1px;
+    border-style: inset;
+
+    text-align: center;
+  }
+
+  .dropdown-content-text {
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 16px;
+
+    margin: 0px;
+    padding: 12px;
+
+    text-decoration: none;
+  }
+
+  .dropdown-content a {
+    display: block;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
   .home-properties-0-container {
     width: 100%;
 
@@ -1555,8 +1669,10 @@ a {
     justify-content: space-between;
     align-content: center;
 
-    padding-top: 64px;
-    padding-bottom: 24px;
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 0px;
 
     padding-left: 24px;
     padding-right: 24px;
@@ -1569,8 +1685,7 @@ a {
 
     text-align: center;
 
-    margin-top: 24px;
-    margin-bottom: 24px;
+    margin-top: 54px;
   }
 
   .home-properties-0-title {
@@ -1602,19 +1717,20 @@ a {
 
   .home-properties-1-container {
     width: 100%;
-    min-height: 40vh;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
 
-    padding-top: 24px;
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 54px;
 
     padding-left: 24px;
     padding-right: 24px;
 
-    align-self: center;
     text-align: center;
   }
 
@@ -1640,9 +1756,11 @@ a {
 
   .home-properties-2-wrapped {
     width: 100%;
+
     padding-left: 24px;
     padding-right: 24px;
-    margin-top: 64px;
+
+    margin-top: 54px;
   }
 
   .home-properties-2-container {
@@ -1796,7 +1914,7 @@ a {
     padding-left: 24;
     padding-right: 24;
 
-    margin-top: 32px;
+    margin-top: 54px;
   }
 
   .home-properties-4-container {
@@ -2209,7 +2327,7 @@ a {
 
     align-self: center;
   }
-  
+
   .pricing-subtitle {
     font-family: "Cormonant";
     font-size: 28px;
