--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -1305,6 +1305,302 @@ a {
 
     margin-top: 8px;
   }
+
+  .about-properties-0-container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 54px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .about-properties-0-pablo-container {
+    width: 250px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    padding: 16px;
+    margin: 0px;
+  }
+
+  .about-properties-0-pablo-title {
+    width: 100%;
+    font-family: "Cormorant";
+    font-size: 40px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .about-properties-0-pablo-founder-text {
+    width: 100%;
+    font-family: "Montserrat";
+    font-size: 18px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
+  }
+
+  .about-properties-0-pablo-text {
+    width: 100%;
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
+  }
+
+  .about-properties-0-pablo-image {
+    width: 250px;
+    height: 250px;
+
+    border-radius: 48px;
+
+    margin-bottom: 16px;
+  }
+
+  .about-properties-0-letters-container {
+    width: 60%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    padding: 24px;
+    margin: 0px;
+  }
+
+  .about-properties-0-title {
+    font-family: "Cormorant";
+    font-size: 64px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .about-properties-0-text {
+    font-family: "Montserrat";
+    font-size: 20px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
+  }
+
+  .about-properties-1-container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 54px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .about-properties-1-cards-container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 54px;
+  }
+
+  .about-properties-1-cards-image {
+    width: 88px;
+    height: 88px;
+
+    border-radius: 98px;
+
+    padding: 8px;
+    align-self: center;
+  }
+
+  .about-properties-1-cards-container-card-icon {
+    width: 64px;
+    height: 64px;
+
+    position: relative;
+    top: 0px;
+    right: 0px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: -64px;
+    margin-right: -64px;
+
+    z-index: 3;
+  }
+
+  .about-properties-1-cards-container-card-icon-image {
+    width: 64px;
+    height: 64px;
+  }
+
+  .about-properties-1-cards-container-card-big {
+    width: Calc(50% - 2rem);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 16px;
+
+    border-width: 1px;
+    border-style: inset;
+
+    padding: 24px;
+
+    border-radius: 16px;
+  }
+
+  .about-properties-1-cards-container-card-little {
+    width: 50%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    align-self: center;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 54px;
+    margin-bottom: 54px;
+
+    border-width: 1px;
+    border-style: inset;
+
+    padding: 24px;
+
+    border-radius: 16px;
+  }
+
+  .about-properties-1-cards-container-card-container-image {
+    width: 88px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-right: 16px;
+  }
+
+  .about-properties-1-cards-container-card-container-letters {
+    width: 80%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+
+    padding: 0px;
+    margin: 0px;
+  }
+
+  .about-properties-1-cards-container-card-container-link {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-content: flex-end;
+
+    padding: 0px;
+    margin: 0px;
+
+    margin-top: 24px;
+  }
+
+  .about-properties-1-cards-container-card-container-link-image {
+    width: 24px;
+    height: 24px;
+
+    align-self: flex-end;
+  }
+
+  .about-properties-1-card-title {
+    font-family: "Cormorant";
+    font-size: 28px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .about-properties-1-card-subtitle {
+    font-family: "Montserrat";
+    font-size: 20px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
+  }
+
+  .about-properties-1-card-text {
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
+  }
 }
 
 /*  Phone  */
