--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -2225,8 +2225,8 @@ a {
     margin: 0px;
     padding: 0px;
 
-    padding-left: 24;
-    padding-right: 24;
+    padding-left: 24px;
+    padding-right: 24px;
 
     margin-top: 54px;
   }
