--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -982,6 +982,84 @@ a {
     margin-top: 8px;
     margin-left: 64px;
   }
+  
+  .admin-login-container {
+    width: 100%;
+    min-height: Calc(100vh - 64px);
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
+  
+  .admin-login-inner-container {
+    width: 32vw;
+    height: 48vh;
+
+    align-self: center;
+    
+  }
+  
+  .admin-login-title {
+    font-family: "Cormonant";
+    font-size: 32px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+  }
+  
+  .admin-login-subtitle {
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 16px;
+  }
+
+  .admin-login-forgot-password-container {
+    width: 100%;
+
+    padding-top: 8px;
+    padding-bottom: 16px;
+  }
+
+  .admin-login-forgot-password-button {
+    margin: 0px;
+    padding: 0px;
+
+    background-color: transparent;
+  }
+  
+  .admin-login-forgot-password-text {
+    font-family: "Montserrat";
+    font-size: 18px;
+    font-weight: 500;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 16px;
+  }
+
+  .admin-login-input {
+    width: 100%;
+
+    background-color: transparent;
+
+    border-width: 1px;
+    border-radius: 98px;
+
+    padding: 8px;
+    padding-left: 16px;
+
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
 
   .page-banner-wrapper {
     width: 100%;
