--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -71,7 +71,7 @@ a {
 }
 
 /*  Pc  */
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1200px) {
   .title-home {
     font-family: 'Cormorant';
     font-weight: 700;
@@ -149,7 +149,6 @@ a {
 
   .home-banner-container {
     width: 100%;
-    height: 500px;
 
     background-size: cover;
     background-repeat: no-repeat;
@@ -171,7 +170,7 @@ a {
   }
 
   .home-banner-letters-container {
-    width: 60%;
+    width: 50%;
 
     display: flex;
     flex-direction: column;
@@ -181,13 +180,13 @@ a {
     width: 100%;
 
     position: absolute;
-    top: 425px;
+    top: 475px;
     left: Calc(12.8% + 32px);
     z-index: 2;
   }
 
   .home-banner-image-container {
-    width: 40%;
+    width: 50%;
 
     display: flex;
     flex-direction: column;
@@ -434,9 +433,15 @@ a {
     margin-right: 24px;
   }
 
+  .home-properties-1-container-image {
+    width: 600px;
+    height: 450px;
+    align-self: center;
+  }
+
   .home-properties-1-container {
     width: 100%;
-    min-height: 65vh;
+    min-height: 90vh;
 
     display: flex;
     flex-direction: column;
@@ -447,11 +452,11 @@ a {
     padding: 0px;
 
     margin-top: 54px;
+    margin-bottom: 54px;
 
     padding-left: 10%;
     padding-right: 10%;
 
-    align-self: center;
     text-align: center;
   }
 
@@ -482,35 +487,36 @@ a {
     justify-content: center;
     align-content: center;
 
-    align-self: center;
-
     margin: 0px;
     padding: 0px;
 
     padding-top: 24px;
-    padding-bottom: 24px;
+    padding-bottom: 0px;
 
     padding-left: 54px;
-    padding-right: 54px;
+    padding-right: 0px;
 
     border-radius: 32px;
+    overflow: hidden;
   }
 
   .home-properties-2-card-letters {
-    width: 60%;
+    width: 55%;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-content: center;
 
-    align-self: center;
 
     margin: 0px;
     padding: 0px;
 
-    padding-left: 24px;
-    padding-right: 24px;
+    padding-left: 8px;
+    padding-right: 8px;
+    
+    padding-bottom: 24px;
   }
 
   .home-properties-2-card-letters-row {
@@ -560,25 +566,25 @@ a {
   }
 
   .home-properties-2-card-image {
-    width: 40%;
+    width: 45%;
+    height: 100%;
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-content: center;
+    justify-content: flex-end;
+    align-content: flex-end;
 
-    align-self: center;
+    align-self: flex-end;
 
     margin: 0px;
     padding: 0px;
   }
 
   .home-properties-2-image-image {
-    width: 411.2px;
-    height: 273.6px;
+    width: 100%;
+    height: 100%;
 
     align-self: "center";
-    padding: 8px;
   }
 
   .home-properties-3-wrapped {
@@ -1693,7 +1699,7 @@ a {
 }
 
 /*  Phone  */
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1200px) {
 
   .title-home {
     font-family: 'Cormorant';
@@ -1754,7 +1760,7 @@ a {
 
   .home-banner-container {
     width: 100%;
-    height: 650px;
+    height: 580px;
 
     background-size: cover;
     background-repeat: no-repeat;
@@ -1781,12 +1787,13 @@ a {
 
   .home-banner-download-container {
     width: 100%;
-
     position: absolute;
-    top: 620px;
+    top: 548px;
     left: 0px;
-
-    z-index: 2;
+/*
+    top: 620px;
+    bottom: 0px;
+*/
 
     display: flex;
     flex-direction: column;
@@ -1798,7 +1805,7 @@ a {
     width: 100%;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-content: center;
 
@@ -2100,6 +2107,12 @@ a {
     height: 54px;
   }
 
+  .home-properties-1-container-image {
+    width: 100%;
+    height: 100%;
+    align-self: center;
+  }
+
   .home-properties-1-container {
     width: 100%;
     min-height: 75vh;
@@ -2113,6 +2126,7 @@ a {
     margin: 0px;
 
     margin-top: 54px;
+    margin-bottom: 54px;
 
     padding-left: 24px;
     padding-right: 24px;
@@ -2151,9 +2165,10 @@ a {
 
   .home-properties-2-container {
     width: 100%;
+    height: 100%;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-content: center;
 
@@ -2163,16 +2178,18 @@ a {
     padding: 0px;
 
     padding-top: 32px;
-    padding-bottom: 32px;
+    padding-bottom: 0px;
 
     padding-left: 24px;
-    padding-right: 24px;
+    padding-right: 0px;
 
     border-radius: 32px;
+    overflow: hidden;
   }
 
   .home-properties-2-card-letters {
     width: 100%;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
@@ -2183,15 +2200,18 @@ a {
 
     margin: 0px;
     padding: 0px;
+
+    padding-right: 24px;
   }
 
   .home-properties-2-card-letters-row {
     width: 100%;
+    height: 100%;
 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-content: center;
+    align-content: flex-end;
 
     margin: 0px;
     padding: 0px;
@@ -2222,7 +2242,7 @@ a {
 
   .home-properties-2-card-text {
     font-family: "Montserrat";
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 400;
     margin: 0px;
     padding: 0px;
@@ -2232,24 +2252,25 @@ a {
 
   .home-properties-2-card-image {
     width: 100%;
+    height: 100%;
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-content: center;
+    justify-content: flex-end;
+    align-content: flex-end;
 
-    align-self: center;
+    align-self: flex-end;
 
     margin: 0px;
     padding: 0px;
   }
 
   .home-properties-2-image-image {
-    width: 254px;
-    height: 171px;
+    width: 100%;
+    height: 100%;
 
-    align-self: "center";
-    padding: 8px;
+    align-self: flex-end;
+    padding: 0px;
   }
 
   .home-properties-3-wrapped {
