--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -840,7 +840,7 @@ a {
   .home-properties-5-title {
     font-family: "Cormorant";
     font-size: 32px;
-    font-weight: bold;
+    font-weight: 700;
 
     margin: 0px;
     padding: 0px;
@@ -2610,7 +2610,7 @@ a {
   .home-properties-5-title {
     font-family: "Cormorant";
     font-size: 28px;
-    font-weight: bold;
+    font-weight: 700;
 
     margin: 0px;
     padding: 0px;
