--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -666,7 +666,7 @@ a {
     padding-right: 10%;
 
     margin-top: 8px;
-    margin-bottom: 54px;
+    margin-bottom: 0px;
   }
 
   .home-properties-5-container {
@@ -689,6 +689,27 @@ a {
     margin-top: 24px;
   }
 
+  .home-properties-6-container {
+    width: 100%;
+    min-height: 65vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    text-align: left;
+
+    margin: 0px;
+    padding: 0px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+
+    margin-top: 24px;
+    margin-bottom: 54px;
+  }
+
   .home-properties-4-cards-row {
     width: 100%;
 
@@ -707,6 +728,61 @@ a {
 
   .home-properties-5-card {
     width: 400px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    text-align: left;
+
+    margin: 0px;
+    padding: 24px;
+
+    border-radius: 24px;
+
+    align-self: center;
+  }
+
+  .home-properties-6-card {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    text-align: left;
+
+    margin: 0px;
+    padding: 24px;
+
+    border-radius: 24px;
+
+    align-self: center;
+  }
+
+  .home-properties-6-card-letters {
+    width: 60%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+
+    text-align: left;
+
+    margin: 0px;
+    padding-top: 8px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 24px;
+
+    border-radius: 24px;
+  }
+
+  .home-properties-6-card-image-container {
+    width: 40%;
 
     display: flex;
     flex-direction: column;
@@ -853,6 +929,26 @@ a {
 
     margin: 0px;
     padding: 0px;
+  }
+
+  .home-properties-6-title {
+    font-family: "Cormorant";
+    font-size: 32px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .home-properties-6-text {
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
   }
 
   .home-properties-4-card-tokens-text {
@@ -2439,7 +2535,7 @@ a {
     padding-right: 24px;
 
     margin-top: 0px;
-    margin-bottom: 24px;
+    margin-bottom: 0px;
   }
 
   .home-properties-5-container {
@@ -2459,6 +2555,27 @@ a {
     padding-right: 24px;
 
     margin-top: 24px;
+  }
+
+  .home-properties-6-container {
+    width: 100%;
+    min-height: 65vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    text-align: left;
+
+    margin: 0px;
+    padding: 0px;
+
+    padding-left: 24px;
+    padding-right: 24px;
+
+    margin-top: 24px;
+    margin-bottom: 54px;
   }
 
   .home-properties-4-cards-row {
@@ -2489,6 +2606,51 @@ a {
 
     margin: 0px;
     padding: 24px;
+
+    border-radius: 24px;
+
+    align-self: center;
+  }
+
+  .home-properties-6-card {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    text-align: left;
+
+    margin: 0px;
+    padding: 24px;
+
+    border-radius: 24px;
+
+    align-self: center;
+  }
+
+  .home-properties-6-card-letters {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+
+    text-align: left;
+
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .home-properties-6-card-image-container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 
     border-radius: 24px;
 
@@ -2625,6 +2787,25 @@ a {
     padding: 0px;
   }
 
+  .home-properties-6-title {
+    font-family: "Cormorant";
+    font-size: 28px;
+    font-weight: 700;
+
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .home-properties-6-text {
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 8px;
+  }
 
   .home-properties-4-card-tokens-text {
     font-family: "Montserrat";
