--- a/deepfriend/src/styles/globals.css
+++ b/deepfriend/src/styles/globals.css
@@ -473,6 +473,14 @@ a {
     align-self: center;
   }
 
+  .home-properties-8-container-image {
+    width: 141px;
+    height: 41px;
+    align-self: center;
+
+    margin-top: 16px;
+  }
+
   .home-properties-1-container {
     width: 100%;
 
@@ -484,13 +492,53 @@ a {
     margin: 0px;
     padding: 0px;
 
-    margin-top: 64px;
-    margin-bottom: 64px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 
     padding-left: 10%;
     padding-right: 10%;
 
     text-align: center;
+  }
+
+  .home-properties-8-wrapper {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 80px;
+    margin-bottom: 80px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+
+    text-align: center;
+  }
+
+  .home-properties-8-container {
+    width: 460px;
+    height: 230px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    margin: 0px;
+    padding: 24px;
+
+    padding-left: 32px;
+    padding-right: 32px;
+
+    text-align: center;
+
+    border-radius: 32px;
   }
   
   .home-properties-1-container-image {
@@ -538,6 +586,18 @@ a {
   .home-properties-1-text {
     font-family: "Montserrat";
     font-size: 20px;
+    font-weight: 400;
+  }
+
+  .home-properties-8-title {
+    font-family: "Cormonant";
+    font-size: 24px;
+    font-weight: 700;
+  }
+  
+  .home-properties-8-text {
+    font-family: "Montserrat";
+    font-size: 14px;
     font-weight: 400;
   }
 
@@ -2373,6 +2433,40 @@ a {
 
     align-self: center;
   }
+  
+  .home-properties-8-wrapper {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+
+    margin: 0px;
+    padding: 0px;
+
+    margin-bottom: 80px;
+
+    text-align: center;
+  }
+
+  .home-properties-8-container {
+    width: 100%;
+    height: 280px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    margin: 0px;
+    padding: 24px;
+
+    padding-left: 24px;
+    padding-right: 24px;
+
+    text-align: center;
+  }
 
   .home-properties-1-container-image {
     width: 100%;
@@ -2400,6 +2494,14 @@ a {
     width: 240px;
     height: 314px;
     align-self: center;
+  }
+
+  .home-properties-8-container-image {
+    width: 141px;
+    height: 41px;
+    align-self: center;
+
+    margin-top: 16px;
   }
 
   .home-properties-1-container {
@@ -2439,8 +2541,20 @@ a {
     margin: 0px;
     padding: 0px;
 
-    margin-top: 16px;
+    margin-top: 8px;
     text-align: center;
+  }
+
+  .home-properties-8-title {
+    font-family: "Cormonant";
+    font-size: 24px;
+    font-weight: 700;
+  }
+  
+  .home-properties-8-text {
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: 400;
   }
 
   .home-properties-2-wrapped {
